--- a/app/views/accounts/login.html.erb
+++ b/app/views/accounts/login.html.erb
@@ -146,7 +146,7 @@ ion-content {
                 <ion-row><ion-col offset=1.6><div>
                     <%= form.submit "Log in",style: "width:300px;", class: "btn-hover color-1" %>
                 </div></ion-col></ion-row>
-                <div style="text-align: center;"><a onMouseOver="this.style.color='purple'" onMouseOut="this.style.color='rgba(0, 0, 0, 0.6)'" style="text-decoration: none; font-size: 17px; color: rgba(0, 0, 0, 0.6);" href="/accounts/signup/student">Student Sign Up</a></div>
+                <div style="text-align: center;"><a onMouseOver="this.style.color='purple'" onMouseOut="this.style.color='rgba(0, 0, 0, 0.6)'" style="text-decoration: none; font-size: 17px; color: rgba(0, 0, 0, 0.6);" href="/accounts/signup/student">Sign Up as Student</a></div>
                 
 
                 <% end %>
@@ -173,7 +173,7 @@ ion-content {
                 <ion-row><ion-col offset=1.6><div>
                     <%= form.submit "Log in",style: "width:300px;", class: "btn-hover color-1" %>
                 </div></ion-col></ion-row>
-               <div style="text-align:center;"><a style="text-decoration: none; font-size: 17px; color: rgba(0, 0, 0, 0.6);" onMouseOver="this.style.color='purple'" onMouseOut="this.style.color='rgba(0, 0, 0, 0.6)'" href="/accounts/signup/mess">Mess Sign Up</a></div>
+               <div style="text-align:center;"><a style="text-decoration: none; font-size: 17px; color: rgba(0, 0, 0, 0.6);" onMouseOver="this.style.color='purple'" onMouseOut="this.style.color='rgba(0, 0, 0, 0.6)'" href="/accounts/signup/mess">Sign Up as Mess</a></div>
 
                 <% end %>
                 </div>
