--- a/app/views/accounts/signupStudent.html.erb
+++ b/app/views/accounts/signupStudent.html.erb
@@ -137,7 +137,7 @@ ion-content {
                     <ion-label>&emsp;&nbsp;<%= form.label "Mess Name" %></ion-label>
                     <ion-item>
 
-                      <%=form.select :mess_id, Mess.all.collect { |c| [ c.mess_name.upcase, c.mess_name ] } ,class: 'form-field'%>
+                      <%=form.select :mess_id, Mess.all.collect { |c| [ c.mess_name.upcase, c.mess_name ] },{},{ class: "form-field"} %>
 
                     </ion-item>
                     <ion-label>&emsp;&nbsp;<%= form.label "Room No" %></ion-label>
