--- a/app/views/student/dashboard.html.erb
+++ b/app/views/student/dashboard.html.erb
@@ -172,7 +172,7 @@
             <ion-col>
                 <ion-row style="height: 63px; border-bottom: 1px solid rgba(0, 0, 0, 0.2)">
                     <ion-col size='3'>
-                        <label style="position: relative; left: 350px; top: 20px; weight: 500; font-weight: 400; font-size: 19px; color: grey">MESS MANAGEMENT</label>
+                        <label style="position: relative; left: 500px; top: 20px; weight: 500; font-weight: 400; font-size: 19px; color: grey">MESS MANAGEMENT</label>
                     </ion-col>
                     <ion-col offset='6' size='3'>
                         <a style="text-decoration: none; position: relative; left: 45px; top: 20px; font-size: 16px;" onClick="changePasswordPopover(event)" class="navlink">Change Password</a>
@@ -190,7 +190,8 @@
                             <ion-row>
                             
                                 <ion-col offset=2 size=8>
-                                        <div  style="text-align: center;"><h1>Personal Information</h1></div><br>
+                                <br>
+                                        <div  style="text-align: center;"><h1>PERSONAL INFORMATION</h1></div><br>
                             <br><br>            
                             <div id="profile_content" >
                                 <ion-spinner ></ion-spinner>
@@ -202,7 +203,7 @@
 
                     </div>
 
-                    <div id="guests" class="tabcontent" style="display:none;">
+                    <div id="guests" class="tabcontent" style="display:none;"><br>
                     <div style="text-align: center;"><h1 >MY GUESTS</h1></div>
                     <br>
                         
@@ -240,10 +241,10 @@
                     <p>List of all staff goes here</p> 
                     </div>
 
-                    <div id="messcut" class="tabcontent" style="display:none;">
+                    <div id="messcut" class="tabcontent" style="display:none;"><br>
                     <div style="text-align: center;"><h1>MESS CUT ENTRY</h1></div>
                     <br><br>
-                    <ion-row><ion-col offset=1 size=8>
+                    <ion-row><ion-col offset=1.9 size=8>
                     <ion-card style="width:900px;">
                         <br><br>
                         <ion-card-container>
@@ -291,7 +292,7 @@
                         <br>
                     </ion-card></ion-col></ion-row>
                         <br><br>
-                    <div style="text-align: center;"><h3>MY DETAILED MESS CUT LIST</h3></div>
+                    <div style="text-align: center;"><h3>MY DETAILED MESS CUT LIST</h3></div><br>
                     <ion-row><ion-col offset=2 size=8>
                     <div id="p">
                     <ion-card>
@@ -331,7 +332,7 @@
                     </div>
 
                     
-                    <div id="extra" class="tabcontent" style="display:none;">
+                    <div id="extra" class="tabcontent" style="display:none;"><br>
                     <div style="text-align: center;"><h1>MY EXTRAS</h1></div>
                         <br>
              
